--- a/download.html
+++ b/download.html
@@ -4,7 +4,7 @@
         <title>Migblock</title>
         <link rel="icon" type="image/png" href="favicon.png"/>
         <link rel="stylesheet" style="text/css" href="style/common.css"/>
-        <link rel="stylesheet" style="text/css" href="style/donate.css"/>
+        <link rel="stylesheet" style="text/css" href="style/download.css"/>
     </head>
     <body>
         <div class="background">
@@ -39,26 +39,32 @@
                 </a>
             </div>
             <div class="title-logo">
-                <!-- <img src="images/MigblockLogoGrey.png" width="768" height="277.5"/> -->
+                <!img src="images/MigblockLogoGrey.png" width="768" height="277.5"/>
             </div>
             <div class="main">
                 <div class="main-first">
-                    <p class="main-first-title">Donations</P>
+                    <p class="main-first-title">Downloading Migblock</P>
                     <p class="main-first-paragraph">
-                        We appreciate all the love and support from our community, it means the world to us as a Team that people enjoy our Game.
+                        Migblock has a Launcher that will keep you up to date as we add new things.
                         <br>
-                        <br>Even though we enjoy the process of making Games, it brings us more joy to see other people having fun once we've released them.
+                        <div style="text-align:center;">
+                            <img src="images/launcher.png" width="206" height="288" alt="Launcher">
+                        </div>
+                        <br>Currently, and for the moment, you can download it from our <a style="color:#328ffc" href="https://migblock-team.itch.io/migblock" target="_blank">Itch.io</a> page.
                         <br>
-                        <br>If you wish to donate, for the moment you can do so on our Itch.io page: <a style="color:#328ffc" href="https://migblock-team.itch.io/" target="_blank">https://migblock-team.itch.io/</a>
+                        <br>Though soon we'll enable downloads here too.
+                    </p>
+                </div>
+                <div class="main-second">
+                    <p class="main-second-title">Downloads</P>
+                    <p class="main-second-paragraph">
+                        You can download the most recent release of the Launcher at any of the following:
+                        <br><br>- Itch.io <a style="color:#328ffc" href="https://migblock-team.itch.io/migblock" target="_blank">https://migblock-team.itch.io/migblock</a>
+                        <br><br>- Discord <a style="color:#328ffc" href="https://discord.migblock.net/" target="_blank">https://discord.migblock.net/</a>
                         <br>
-                        <br>Though keep in mind that just being a member of our community is enough of a donation in our view.
-                        
-                        
-                <br><img src="images/angel.png" width="206" height="206" alt="Angel">
-
-                        <br><br><br><a style="text-decoration:none;color:#328ffc" href="https://discord.migblock.net/">Join the Community!</a>
-
-                        <br><br><a style="text-decoration:none;color:#328ffc" href="/">Return Home</a>
+                        <br>Thank you so much for your support.
+                        <br>And please don't hesitate to submit feedback and such, as we genuinely value feedback from our Community. Since this Game's not only for us, it's for you too.
+                        <br>As well as bug reports! - So that we can fix them.
                     </p>
                 </div>
             </div>
