--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
                     <p id="button-home" class="menu-button">HOME</p>
                 </a>
                 <div style="margin:12px"></div>
-                <a style="text-decoration:none" href="games.html">
-                    <p id="button-games" class="menu-button">GAMES</p>
+                <a style="text-decoration:none" href="download.html">
+                    <p id="button-games" class="menu-button">DOWNLOAD</p>
                 </a>
                 <div style="margin:12px"></div>
                 <a style="text-decoration:none" href="news.html">
                     <p id="button-games" class="menu-button">NEWS</p>
                 </a>
                 <div style="margin:12px"></div>
-                <a style="text-decoration:none" href="https://discord.migblock.net" target="_blank">
+                <a style="text-decoration:none" href="https://discord.migblock.net/" target="_blank">
                     <p id="button-discord" class="menu-button">DISCORD</p>
                 </a>
                 <div style="margin:12px"></div>
@@ -42,36 +42,53 @@
                 <div class="main-first">
                     <p class="main-first-title">What is Migblock?</P>
                     <p class="main-first-paragraph">
-                        Simply put, Migblock is a passion project on-going for over 7 years. Originally a Sandbox Game, after many many rewrites adjustments and improvements as the Team sharpened their skills, the Project was split into 3 sub-projects:
+                        Simply put, Migblock is a passion project; An infinite Voxel Universe wherein which you can do just about anything your heart desires.
                         <br>
-                        <br><a style="text-decoration:none;color:#328ffc" href="migcraft.html">Migcraft</a>, an open source Minecraft Client.
-                        <br><a style="text-decoration:none;color:#328ffc" href="migblock.html">Migblock</a>, a Minecraft-compatible Game.
-                        <br><a style="text-decoration:none;color:#328ffc" href="migtest.html">Migtest</a>, a standalone sandbox Game.
-                        <br>For more information on respective titles, see their pages!
+                        <br>Migblock features large worlds with near infinite build height, as well as depth, with the ability to create your own Voxel Starships to traverse an infinite Procedural Galaxy littered with all sorts of Procedural Planets. - and perhaps something a little spooky also.
+                        <br><img src="images/universe.png" width="682" height="216"/>
+                        <br><img src="images/starships-small.png" width="682" height="182"/>
                         <br>
-                        <br>You can meet the Team and community on <a style="text-decoration:none;color:#328ffc" href="https://discord.migblock.net/" target="_blank">Discord</a>, we'd love to have you!
+                        <br>Realistic Item physics and a powerful dynamic lighting engine.
+                        <br><img src="images/items.png" width="682" height="182"/>
+                        <br><img src="images/lights.png" width="682" height="182"/>
                         <br>
-                        <br>You can see our <a style="text-decoration:none;color:#328ffc" href="https://youtube.migblock.net/" target="_blank">Youtube channel</a> for trailers, tutorials, sneak-peaks, developer stuffs and more!
+                        <br>Custom wings and support for HD Player Skins. - So you can express yourself however you like.
+                        <br><img src="images/wings.png" width="682"/>
+                        <br>
+                        <br>There are lot's of minerals and such with the ability to create custom Tools.
+                        <br><img src="images/tools.png" width="682"/>
+                        <br>
+                        <br>The world is alive with a dynamic and simulated ecosystem.
+                        <br>Block updates will occur regardless of which Chunks are loaded.
+                        <br>- Seasons also roll across the world.
+                        <br><img src="images/seasons.png" width="682" height="182"/>
+                        <br>
+                        <br>With Multiplayer support you don't have to be so alone. 
+                        <br>The Server software is bundled with the Game, there's LAN support too.
+                        <br>We've also a public community server where all are welcome.
+                        <br>
+                        <br>Migblock is currently in early access. So not all of these things have found their way to the full release as yet. Some things might change or be improved, so nothing's set in stone. You've a chance now to join us on this adventure and help create the prefect Game. 
+                        <br>
+                        <br><br>Watch this space for updates!
+                        <br>
+                        
                     </p>
                 </div>
                 <div class="main-second">
                     <p class="main-second-title">How to get Started</P>
                     <p class="main-second-paragraph">
-                        This is the very beginning of a new phase for the Migblock Project, and as such there's not all that much to do as a player. But there will be shortly!
+                        See our <a style="text-decoration:none;color:#328ffc" href="download.html" target="_blank">Downloads</a> page, and begin your journey in Migblock today.
                         <br>
-                        <br>So please, if you share our interest in this project, we encourage you to come say "Hi!" and join our community on Discord.
+                        <br>If you share our interest in this project, we encourage you to come say 'Hi!'.
+                        <br>You can meet the Team and community on <a style="text-decoration:none;color:#328ffc" href="https://discord.migblock.net/" target="_blank">Discord</a>, we'd love to have you!
                         <br>
-                        <br>We will start play tests at some point, and when that day comes we'd love to have everyone that we can! :D
+                        <br>You can see our <a style="text-decoration:none;color:#328ffc" href="https://youtube.migblock.net/" target="_blank">Youtube Channel</a> for trailers, tutorials, sneak-peaks, developer stuffs and more!
+                        <br>
                     </p>
                 </div>
                 <div class="main-third">
-                    <p class="main-third-title">News? News!</P>
+                    <p class="main-third-title"></P>
                     <p class="main-third-paragraph">
-                        5/12/2023:
-                        <br>
-                        <br>We have started setting things up! Our Team is reuniting and laying out the plans for the upcoming projects. Stay tuned for more info!
-                        <br>
-                        <br>Join our Discord for more information: <a style="color:#328ffc" href="https://discord.migblock.net/">https://discord.migblock.net/</a>
                     </p>
                 </div>
             </div>
