--- a/news.html
+++ b/news.html
@@ -18,8 +18,8 @@
                     <p id="button-home" class="menu-button">HOME</p>
                 </a>
                 <div style="margin:12px"></div>
-                <a style="text-decoration:none" href="games.html">
-                    <p id="button-games" class="menu-button">GAMES</p>
+                <a style="text-decoration:none" href="download.html">
+                    <p id="button-games" class="menu-button">DOWNLOAD</p>
                 </a>
                 <div style="margin:12px"></div>
                 <a style="text-decoration:none" href="news.html">
@@ -44,10 +44,10 @@
             <div class="main">
                 <div class="news-feed">
                     <p>
-                        <p class="date">5/12/2023:</p><p class="news-paragraph">
-                        <br>We have started setting things up! Our Team is reuniting and laying out the plans for the upcoming projects. Stay tuned for more info!
+                        <p class="date">31/10/2025:</p><p class="news-paragraph">
+                        <br>We're going to be soon releasing the Game to early access. We look forward to your feedback and bug reports!
                         <br>
-                        <br>Join our Discord for more information: <a style="color:#328ffc" href="https://discord.migblock.net/">https://discord.migblock.net/</a>
+                        <br>Join our Discord for more information: <a style="color:#328ffc" href="https://discord.migblock.net/" target="_blank">https://discord.migblock.net/</a>
                         </p>
                         <br><br><br><br>
                     </p>
