--- a/temp.html
+++ b/temp.html
@@ -17,8 +17,8 @@
                     <p id="button-home" class="menu-button">HOME</p>
                 </a>
                 <div style="margin:12px"></div>
-                <a style="text-decoration:none" href="games.html">
-                    <p id="button-games" class="menu-button">GAMES</p>
+                <a style="text-decoration:none" href="download.html">
+                    <p id="button-games" class="menu-button">DOWNLOAD</p>
                 </a>
                 <div style="margin:12px"></div>
                 <a style="text-decoration:none" href="news.html">
