--- a/help.html
+++ b/help.html
@@ -4,7 +4,7 @@
         <title>Migblock</title>
         <link rel="icon" type="image/png" href="favicon.png"/>
         <link rel="stylesheet" style="text/css" href="style/common.css"/>
-        <link rel="stylesheet" style="text/css" href="style/migblock.css"/>
+        <link rel="stylesheet" style="text/css" href="style/help.css"/>
     </head>
     <body>
         <div class="background">
@@ -18,8 +18,8 @@
                     <p id="button-home" class="menu-button">HOME</p>
                 </a>
                 <div style="margin:12px"></div>
-                <a style="text-decoration:none" href="games.html">
-                    <p id="button-games" class="menu-button">GAMES</p>
+                <a style="text-decoration:none" href="download.html">
+                    <p id="button-games" class="menu-button">DOWNLOAD</p>
                 </a>
                 <div style="margin:12px"></div>
                 <a style="text-decoration:none" href="news.html">
@@ -45,7 +45,7 @@
                 <div class="main-first">
                     <p class="main-first-title">COMING SOON</P>
                     <p class="main-first-paragraph">
-                        <br><br>For now you can join our Discord for help: <a style="color:#328ffc" href="https://discord.migblock.net/">https://discord.migblock.net/</a>
+                        <br><br>For now you can join our Discord for help: <a style="color:#328ffc" href="https://discord.migblock.net/" target="_blank">https://discord.migblock.net/</a>
                         <br><br><br><a style="text-decoration:none;color:#328ffc" href="/">Return Home</a>
                     </p>
                 </div>
