Replace images with JPEGs to improve loading times.

--- a/index.html
+++ b/index.html
@@ -45,23 +45,23 @@
                         Simply put, Migblock is a passion project; An infinite Voxel Universe wherein which you can do just about anything your heart desires.
                         <br>
                         <br>Migblock features large worlds with near infinite build height, as well as depth, with the ability to create your own Voxel Starships to traverse an infinite Procedural Galaxy littered with all sorts of Procedural Planets. - and perhaps something a little spooky also.
-                        <br><img src="images/universe.png" width="682" height="216"/>
-                        <br><img src="images/starships-small.png" width="682" height="182"/>
+                        <br><img src="images/universe.jpg" width="682" height="216"/>
+                        <br><img src="images/starships-small.jpg" width="682" height="182"/>
                         <br>
                         <br>Realistic Item physics and a powerful dynamic lighting engine.
-                        <br><img src="images/items.png" width="682" height="182"/>
-                        <br><img src="images/lights.png" width="682" height="182"/>
+                        <br><img src="images/items.jpg" width="682" height="182"/>
+                        <br><img src="images/lights.jpg" width="682" height="182"/>
                         <br>
                         <br>Custom wings and support for HD Player Skins. - So you can express yourself however you like.
-                        <br><img src="images/wings.png" width="682"/>
+                        <br><img src="images/wings.jpg" width="682"/>
                         <br>
                         <br>There are lot's of minerals and such with the ability to create custom Tools.
-                        <br><img src="images/tools.png" width="682"/>
+                        <br><img src="images/tools.jpg" width="682"/>
                         <br>
                         <br>The world is alive with a dynamic and simulated ecosystem.
                         <br>Block updates will occur regardless of which Chunks are loaded.
                         <br>- Seasons also roll across the world.
-                        <br><img src="images/seasons.png" width="682" height="182"/>
+                        <br><img src="images/seasons.jpg" width="682" height="182"/>
                         <br>
                         <br>With Multiplayer support you don't have to be so alone. 
                         <br>The Server software is bundled with the Game, there's LAN support too.
